Fixed features wrapping issue IE / Firefox

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -400,6 +400,10 @@ ul,ol
     text-decoration:none;
 }
 
+.main-content .block-boxes-title-features .views-row-4 {
+	clear:both;
+}
+
 .campaign-link
 {
     background:url(../images/2012-02-08/hash.png) no-repeat scroll 0 0 transparent;
